# cc-usage-tracker

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: build.yml  release.yml
assets/hicolor/: index.theme
src/: api.rs  cli_provider.rs  credentials.rs  display.rs  main.rs  provider.rs  theme.rs
