[package]
name = "cc-usage-tracker"
version = "0.1.0"
edition = "2021"
description = "Linux system tray application that displays Claude Code usage statistics"
license = "MIT"
repository = "https://github.com/georgii/cc-usage-tracker"
keywords = ["claude", "usage", "tray", "linux", "gtk"]
categories = ["command-line-utilities"]

[dependencies]
async-trait = "0.1"
libappindicator = "0.9"
gtk = "0.18"
glib = "0.21.5"
regex-lite = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util", "signal"] }
dirs = "6.0"
libc = "0.2.180"
pty-process = { version = "0.4", features = ["async"] }
nix = { version = "0.29", features = ["signal", "process"] }
tokio-io-timeout = "1.2"
pin-project-lite = "0.2"
zbus = "5"
futures-util = "0.3"
